# rotobot

./: .gitignore  README.md  pyproject.toml  start.sh  stop.sh  upload.sh
debug/: stepper.py  stepper2.py  test-360.py  test-motorkit.py  test-switch.py  test-vncl4040.py
sbin/: setup.sh
src/: constants.py  motor_control.py  rotobot.py
