[tool.poetry]
name = "rotobot"
version = "0.1.0"
description = "Turntable controller with a web service interface"
authors = ["Bee <bee.wilkerson@ymail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
websockets = "^10.4"
Flask = "^2.2.3"
Flask-Cors = "^3.0.10"
adafruit-circuitpython-motorkit = "^1.6.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
flake8-unused-arguments = "^0.0.13"
black = "^23.1.0"
pre-commit = "^3.1.0"
pytest = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
